--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       margin: 20px 100px 20px 0;
     }
     img{
-      width: 80%
+      width: 80%;
+      max-width: 200px;
     }
 
   </style>
