--- a/polymer-ui-scaffold.html
+++ b/polymer-ui-scaffold.html
@@ -14,7 +14,7 @@ license that can be found in the LICENSE file.
  * @class polymer-ui-scaffold
  */
 -->
-<link rel="import" href="polymer/polymer.html">
+<link rel="import" href="components/polymer/polymer.html">
 <link rel="import" href="components/core-layout-grid/core-layout-grid.html">
 <link rel="import" href="components/core-toolbar/core-toolbar.html">
 <link rel="import" href="components/core-icon-button/core-icon-button.html">
