--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>polymer-ui-scaffold</title>
-        <script src="platform/platform.js"></script>
+        <link rel="import" href="components/polymer/polymer.html">
         <link rel="import" href="polymer-ui-scaffold.html">
         <link rel="import" href="components/core-icon-button/core-icon-button.html">
         <link rel="import" href="components/core-item/core-item.html">
