--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <meta name="apple-mobile-web-app-capable" content="yes">
 
   <script src="components/platform/platform.js"></script>
-  <link rel="import" href="components/my-components/menu-inicio.html">
+  <link rel="import" href="components/my-components/menu-inicio-test.html">
   <link rel="import" href="core-scaffold.html">
   <link rel="import" href="components/core-header-panel/core-header-panel.html">
   <link rel="import" href="components/core-menu/core-menu.html">
@@ -87,7 +87,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <div tool><img id="logoHub" src="images/thub_logo.svg"></div>
 
     <div class="content">
-     <menu-inicio></menu-inicio>
+     <menu-inicio-test></menu-inicio-test>
     </div>
 
   </core-scaffold>
